# OCR-projekat

./: .gitignore  README.md  analiza_karaktera.py  dokumentacija.md  pyproject.toml
data/data/test/: bih1.txt  bih10.txt  bih2.txt  bih3.txt  bih4.txt  bih5.txt  bih6.txt  bih7.txt  bih8.txt  bih9.txt  eu1.txt  eu2.txt  eu3.txt  eu4.txt  eu5.txt  eu6.txt  eu7.txt  eu8.txt  srb1.txt  srb10.txt  srb2.txt  srb3.txt  srb4.txt  srb5.txt  srb6.txt  srb7.txt  srb8.txt  srb9.txt  synth_00308.txt  synth_00309.txt  synth_00310.txt  synth_00311.txt  synth_00312.txt  synth_00313.txt  synth_00314.txt  synth_00315.txt  synth_00316.txt  synth_00317.txt  synth_00318.txt  synth_00319.txt  (+90 more)
data/data/train/: bih11.txt  bih12.txt  bih13.txt  bih14.txt  bih15.txt  bih16.txt  bih17.txt  bih18.txt  bih19.txt  bih20.txt  bih21.txt  bih22.txt  bih23.txt  bih24.txt  bih25.txt  bih26.txt  bih27.txt  bih29.txt  bih30.txt  bih32.txt  bih33.txt  bih34.txt  bih35.txt  bih36.txt  bih37.txt  bih38.txt  bih39.txt  bih40.txt  eu10.txt  eu11.txt  eu12.txt  eu13.txt  eu14.txt  eu15.txt  eu16.txt  eu17.txt  eu18.txt  eu19.txt  eu20.txt  eu21.txt  (+351 more)
data/data/val/: bih41.txt  bih42.txt  bih43.txt  bih44.txt  bih45.txt  bih46.txt  bih47.txt  bih48.txt  bih49.txt  bih50.txt  eu34.txt  eu35.txt  eu36.txt  eu37.txt  eu38.txt  eu39.txt  eu40.txt  eu41.txt  srb41.txt  (+112 more)
outputs/: char_counts.csv  char_counts_with_dash.csv
src/: balansiraj_karaktere.py  compare_decoders.py  dataset.py  debug_resize.py  evaluate.py  inference.py  metrics.py  model.py  plot_results.py  pripremi_podatke.py  train.py  txt_fix_formats.py
