[project]
name = "ocr-tablice"
version = "0.1.0"
description = "CRNN OCR za prepoznavanje automobilskih tablica - edukativni projekat"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "pillow>=10.0.0",
    "python-levenshtein>=0.21.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "seaborn>=0.12.0",
    "opencv-python>=4.8.0",
]

[project.scripts]
train    = "src.train:main"
evaluate = "src.evaluate:main"
infer    = "src.inference:main"
plot     = "src.plot_results:main"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
